# AI-daily-probems-solving

./: .gitignore  AGENTS.md  Gemma-Vocab-Coach-Full-Writeup.docx  README.md  index.md  userflow.md
gemma-flashcards/: README.md  app.py  main.py  pyproject.toml
gemma-flashcards/docs/: README.md  phase-0-foundation.md  phase-1-mvp.md  phase-2a-personalization.md  phase-2b-embeddings.md  phase-3-advanced.md  phase-4-auth.md
gemma-flashcards/models/: __init__.py
gemma-flashcards/routes/: api.py  auth.py  flashcards.py  main.py
gemma-flashcards/services/: __init__.py  background.py  documents.py  embeddings.py  gemma.py  ownership.py  profile.py  progress.py  quiz.py  retrieval.py  review.py  roadmap.py  vocabulary.py
gemma-flashcards/static/css/: main.css
gemma-flashcards/static/js/: live-background.js
gemma-flashcards/templates/: ask.html  base.html  conversation.html  dashboard.html  dictionary.html  flashcards.html  history.html  index.html  library.html  login.html  onboarding.html  placement.html  quiz.html  review.html  roadmap.html  settings.html  signup.html  stub.html  upload.html  upload_excel.html  upload_preview.html
kaggle/: Gemma_Vocab_Coach_Overview.ipynb
