[project]
name = "gemma-flashcards"
version = "0.1.0"
description = "Gemma-powered language learning memory system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.0",
    "google-genai>=2.10.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pypdf>=5.0.0",
    "openpyxl>=3.1.0",
    "sentence-transformers>=3.0.0",
    "numpy>=2.0.0",
]

